# agent

./: .env.example  .env.template  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  EMOTION_INTELLIGENCE_SYSTEM_SUMMARY.md  LICENSE  README.md  api-ui.md  api_routes_analysis.json  comprehensive_test_report.md  debug_density.py  debug_sequence.py  debug_tokens.py  debug_words.py  demo_document_api.py  extract_routes.py  package-lock.json  package.json  simple_page_test.js  test_comprehensive_functionality.js  test_websocket_direct.py  tsconfig.json
apps/api/: .env.test  Dockerfile  Dockerfile.rl-system  EVALUATION_SYSTEM_REPORT.md  README.md  concurrency_test_message.txt  fix_final_timezone.py  fix_timezone.py  pyproject.toml  pytest.ini  pytest_minimal.ini  quick_validation.py  redirect_url.txt  simple_performance_test.py  simple_validation.py  standalone_fault_tolerance_server.py  test_bandits_manual.py  test_fault_tolerance_api.py  test_fault_tolerance_simple.py  test_results.txt  test_server.py  validate_evaluation_system.py  validate_model_compression.py
apps/api/datasets/: test_fine_tuning_ds.json
apps/api/docs/: AGENTIC_RAG_IMPLEMENTATION.md
apps/api/exports/: 930124bb-cbab-4131-9384-527a9f65116c.json  metrics_20251220_025530.json  metrics_20251220_112831.json  metrics_20251220_120412.json  metrics_20251220_120437.json  metrics_20251220_121734.json  metrics_20251220_122233.json  metrics_20251221_034233.json  metrics_20251221_034849.json  metrics_20251221_083727.json  metrics_20251221_090131.json  metrics_20251221_090303.json  metrics_20251221_090402.json  metrics_20251223_064038.json
apps/api/fine_tuned_models/1aafd7b6-3b85-4b40-928e-b58b6ebe18da/: adapter_model.safetensors  trainer_state.json  training_config.json
apps/api/fine_tuned_models/3c232feb-eafe-4260-8abb-522e056b24e8/: adapter_model.safetensors  tokenizer.json  tokenizer_config.json  trainer_state.json  training_config.json
apps/api/fine_tuned_models/94d11309-fa3c-4a32-991a-c987dd12852f/: adapter_config.json  tokenizer.json  trainer_state.json  training_config.json
apps/api/fine_tuned_models/f6cd1253-b42f-47c6-8db1-9ba246f6a7d4/: trainer_state.json  training_config.json
apps/api/fine_tuning_jobs/: 1aafd7b6-3b85-4b40-928e-b58b6ebe18da.json  3c232feb-eafe-4260-8abb-522e056b24e8.json  759a6711-f61d-48d2-a4cb-073f6fddad4d.json  86462a51-c27d-48ea-b294-c94e41aac6d8.json  94d11309-fa3c-4a32-991a-c987dd12852f.json  9a74fb95-4726-4354-9ed2-80752dd582c1.json  be0a2780-2775-4fe6-89fa-e4b6b69553d0.json  c620b658-0786-4aaa-89b1-6a0b230ed85f.json  ccffe7bf-52f4-44e3-aaa3-a2ef394d1e73.json  f6cd1253-b42f-47c6-8db1-9ba246f6a7d4.json
apps/api/migrations/: 001_create_feedback_system.py  002_create_evaluation_tables.py  003_create_emotion_modeling_tables.py  003_distributed_security_tables.py  004_create_emotional_memory_tables.py
apps/api/migrations/pgvector_0.8_upgrade/: 001_upgrade_pgvector.py
apps/api/scripts/: test_agentic_rag.py
apps/api/src/: API_TEST_CLEANUP_SUMMARY.md  API_使用情况详细分析表格.md  COMPLETE_API_TEST_REPORT.md  FINAL_COMPLETE_API_TEST_REPORT.md  FINAL_VERIFICATION_REPORT.md  GRAPHRAG_IMPLEMENTATION_REPORT.md  TENSORFLOW_MODULARIZATION.md  __init__.py  analyze_api_business_functions.py  analyze_api_endpoints_improved.py  analyze_frontend_api_coverage.py  analyze_workflows_content.py  api.log65  api_business_analysis.json  api_business_analysis_detailed.json  api_content_coverage_report.md  api_endpoint_analyzer.py  api_frontend_mapping_report.md  api_usage_analyzer_comprehensive.py  api_usage_comprehensive_report.json  api_usage_summary.md  check_test_duplicates.py  code_content_coverage_analyzer.py  comprehensive_api_analyzer.py  comprehensive_content_based_tests.py  create_tables.sql  e2e_langgraph_test.py  fix_imports.py  fix_tensorflow_imports.py  frontend_api_coverage_report.json  generate_detailed_usage_table.py  init_tables.py  main.py  main_core.py  main_emotion.py  main_hybrid.py  main_minimal.py  main_simple.py  main_working.py  minimal_feedback_server.py  (+35 more)
apps/api/src/ai/: __init__.py  openai_client.py  tensorflow_module.py
apps/api/src/api/: __init__.py  base_model.py  exceptions.py  middleware.py
apps/api/src/core/: auth.py  config.py  constants.py  database.py  dependencies.py  docs.py  error_handlers.py  exceptions.py  health.py  logging.py  monitoring.py  qdrant.py  redis.py  tensorflow_config.py
apps/api/src/db/: emotional_memory_models.py  evaluation_models.py  models.py
apps/api/src/offline/: local_inference.py  memory_manager.py  model_cache.py  models.py  network_monitor.py  operation_logger.py  reasoning_engine.py  state_manager.py
apps/api/src/repositories/: __init__.py  agent_repository.py  base.py  emotion_modeling_repository.py  emotional_memory_repository.py  event_tracking_repository.py  experiment_repository.py  feedback_repository.py  session_repository.py  supervisor_repository.py  task_repository.py  workflow_repository.py
apps/api/src/scripts/: init_db.py
apps/api/src/services/: ab_testing_service.py  advanced_traffic_allocator.py  agent_service.py  agentic_rag_service.py  alert_rules_service.py  anomaly_detection_service.py  auto_scaling_service.py  bandit_recommendation_service.py  confidence_interval_service.py  conversation_service.py  data_quality_service.py  emotion_modeling_service.py  emotional_intelligence_service.py  emotional_memory_service.py  event_batch_manager.py  event_buffer_service.py  (+43 more)
apps/api/tests/: conftest.py  test_agent_generation.py  test_agent_init.py  test_api_health.py  test_async_operations.py  test_autogen_simple.py  test_basic_functionality.py  test_e2e_complete.py  test_e2e_full_conversation.py  test_e2e_quick.py  test_exceptions.py  test_frontend_integration.py  test_full_conversation.py  test_full_e2e.py  test_integration_simple.py  test_main.py  test_patient_conversation.py  test_speaker_update.py  test_streaming_websocket.py  test_tool_integration.py  test_websocket.py  test_websocket_conversation.py  test_websocket_only.py  test_websocket_simple.py
(+1896 files in other folders)
